--- a/TechJobsMVC/TechJobsMVC.csproj
+++ b/TechJobsMVC/TechJobsMVC.csproj
@@ -7,7 +7,10 @@
   <ItemGroup>
     <Folder Include="Views\TechJobs\" />
     <Folder Include="Data\" />
-    <Folder Include="Views\List\" />
     <Folder Include="Views\Search\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 </Project>
